kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stablecog-deployment
  namespace: stablecog
  labels:
    app: stablecog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stablecog
  template:
    metadata:
      labels:
        app: stablecog
    spec:
      containers:
        - name: stablecog
          image: replaceme
          resources:
            requests:
              cpu: 1000m
              memory: 1000Mi
            limits:
              cpu: 1500m
              memory: 2000Mi
          ports:
            - containerPort: 3000
          imagePullPolicy: 'Always'
      imagePullSecrets:
        - name: regcred
